--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT=7000
-DB_HOST=localhost
-DB_NAME=db_online
-DB_USER=postgres
-DB_PASS=aigerim08
-DB_PORT=5432
-SECRET_KEY=qwerty123456
+PORT=
+DB_HOST=
+DB_NAME=
+DB_USER=
+DB_PASS=
+DB_PORT=
+SECRET_KEY=
