-Added robokassa payment-method

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "path": "^0.12.7",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "robokaska": "^1.0.0",
     "sequelize": "^6.23.2",
     "slugify": "^1.6.5",
     "uuid": "^9.0.0"
